--- a/nfc.html
+++ b/nfc.html
@@ -57,12 +57,49 @@
         },
         inputs:0,                // set the number of inputs - only 0 or 1
         outputs:1,               // set the number of outputs - 0 to n
-        icon: "powermate.png",    // set the icon (held in public/icons)
+        icon: "nfc.png",    // set the icon (held in public/icons)
         label: function() {      // sets the default label contents
-            return this.name||this.topic||"powermate";
+            return "nfc";
         },
         labelStyle: function() { // sets the class to apply to the label
-            return this.name?"node_label_italic":"";
+            return "node_label_italic";
         }
     });
 </script>
+<!--
+<script type="text/x-red" data-template-name="ndef">
+
+    <div class="form-row">
+        <label for="node-input-name"><i class="icon-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="Name">
+    </div>
+    <div class="form-row">
+        <label for="node-input-topic"><i class="icon-tag"></i> Topic</label>
+        <input type="text" id="node-input-topic" >
+    </div>
+</script>
+
+
+
+<script type="text/x-red" data-help-name="ndef">
+<p>This node trys to decode the NDEF payloads from the NFC node </p>
+</script>
+
+<script type="text/javascript">
+    RED.nodes.registerType('ndef',{
+        category: 'advanced-function',      // the palette category
+        color:"GoldenRod",
+        defaults: {             // defines the editable properties of the node
+            name: {value:"ndef"}   //  along with default values.
+        },
+        inputs:1,                // set the number of inputs - only 0 or 1
+        outputs:1,               // set the number of outputs - 0 to n
+        icon: "ndef.png",    // set the icon (held in public/icons)
+        label: function() {      // sets the default label contents
+            return "ndef";
+        },
+        labelStyle: function() { // sets the class to apply to the label
+            return "node_label_italic";
+        }
+    });
+</script> -->
